<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/personNameHint"
                        android:id="@+id/nameAndSurname"
                        android:textSize="25dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="60dp">
                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/guest"
                        android:onClick="selectImageFromGallery"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="right"
                    android:layout_marginTop="60dp">
                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/personEmail"
                        android:inputType="textEmailAddress"
                        android:textSize="14dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/personPhoneHint"
                        android:id="@+id/phoneNumber"
                        android:textSize="14dp"
                        android:ems="11"
                        android:inputType="phone"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/personBirthDateHint"
                        android:id="@+id/birthDate"
                        android:inputType="date"
                        android:textSize="14dp"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:id="@+id/experience"
                    android:textSize="13dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/education"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/education">
                    <RadioButton
                        android:id="@+id/podstawowe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Podstawowe"
                        android:textSize="13dp"/>
                    <RadioButton
                        android:id="@+id/zawodowe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Zawodowe"
                        android:textSize="13dp"/>
                    <RadioButton
                        android:id="@+id/srednie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Średnie"
                        android:textSize="13dp"/>
                    <RadioButton
                        android:id="@+id/wyzsze"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wyższe"
                        android:textSize="13dp"/>

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/languages"/>


                <EditText
                    android:id="@+id/languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="13dp"
                    android:hint="@string/languagesHint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skills"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:id="@+id/skills"
                    android:textSize="13dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbies"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:id="@+id/hobbies"
                    android:textSize="13dp"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:id="@+id/send"
                android:onClick="sendCV"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock"
                android:id="@+id/lock"
                android:onClick="lockCv"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/submittedNameAndSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"/>
            <ImageView
                android:id="@+id/submittedProfilePicture"
                android:layout_width="150dp"
                android:layout_height="150dp"/>
            <TextView
                android:id="@+id/submittedInformations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>
        </LinearLayout>
    </LinearLayout>




</ScrollView>